# shallowfind

./: .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/server/: .gitignore  manage.py  package.json  pyproject.toml  scenario.dot  schema.yml
apps/server/scenarios/: admin.py  enums.py  models.py  serializers.py  tests.py  types.py  urls.py  views.py
apps/server/scenarios/migrations/: 0001_initial.py  0002_assetallocation_and_more.py  0002_eventseries_initial_amount_currency_and_more.py  0002_scenario_description_and_more.py  0003_alter_investment_value_and_more.py  0003_alter_scenario_residence_state.py  0004_alter_scenario_marital_status.py
apps/server/sessions/: serializers.py  tests.py  views.py
apps/server/shallowfind/: asgi.py  settings.py  urls.py  wsgi.py
apps/server/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/server/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username.py
services/scenario-management/: .env.example  .gitignore  alembic.ini  package.json  pyproject.toml  schema.yml
services/scenario-management/alembic/: env.py
services/scenario-management/alembic/versions/: ae9acc974453_init.py
services/scenario-management/shallowfind/: exceptions.py  generate.py  main.py  responses.py
services/scenario-management/shallowfind/config/: database.py  settings.py
services/scenario-management/shallowfind/controllers/: scenario_controller.py
services/scenario-management/shallowfind/core/: security.py
(+308 files in other folders)
